00.installation/istio-hello-world.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  hosts:
  - "*"
  gateways:
  - hello-world
  http:
  - match:
    - uri:
        # WARNING: if you have another VirtualService with similar uri's prefix
        # you should replace it with 'exact' to avoid 'lost' of traffic. 
        # Example: if you have another prefix '/hello-world-SOMETHING', all traffic will be 'catched'
        # by this 'prefix' (/hello-world) because it matches firstly. 
        prefix: /hello-world
        #exact: /hello-world
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: hello-world
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      serviceAccountName: hello-world
      containers:
        - name: hello-world
          image: bitnami/apache:latest
          volumeMounts:
            - name: hello-world
              mountPath: /app/
      volumes:
        - name: hello-world
          configMap:
            name: hello-world
